buildscript {
    repositories {
        maven {
            name = 'Forge'
            url = 'https://maven.minecraftforge.net'
            content {
                includeGroup 'cpw.mods'
                includeGroup 'net.minecrell'
                includeGroup 'net.minecraftforge'
                includeGroup 'net.minecraftforge.gradle'
            }
        }
        maven {
            name = 'Sponge'
            url = 'https://repo.spongepowered.org/repository/maven-public'
            content {
                includeGroup 'org.spongepowered'
                includeGroup 'org.parchmentmc.feather'
            }
        }
        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org'
            content {
                includeGroup 'org.parchmentmc'
            }
        }
        if (gradle.startParameter.projectProperties.containsKey('enableCurseGradle')) {
            maven {
                name = 'Gradle Plugin Portal'
                url = 'https://plugins.gradle.org/m2/'
                content {
                    includeGroup 'gradle.plugin.com.matthewprenger'
                }
            }
        }
        mavenCentral()
    }
    dependencies {
        classpath "net.minecraftforge.gradle:ForgeGradle:${forgegradle_version}"
        classpath "org.spongepowered:mixingradle:${mixingradle_version}"
        classpath "org.parchmentmc:librarian:${librarian_version}"
        if (gradle.startParameter.projectProperties.containsKey('enableCurseGradle')) {
            classpath "gradle.plugin.com.matthewprenger:CurseGradle:${cursegradle_version}"
        }
    }
    configurations.classpath {
        resolutionStrategy.cacheChangingModulesFor 7, 'days'
        resolutionStrategy.cacheDynamicVersionsFor 7, 'days'
    }
}

plugins {
    id 'idea'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

if (gradle.startParameter.projectProperties.containsKey('enableCurseGradle')) {
    apply plugin: 'com.matthewprenger.cursegradle'
}

version = "${minecraft_version}-${mod_version}"
group = mod_group_id

base {
    archivesName = "multiblocked2-unofficial"
}

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

configurations.configureEach {
    resolutionStrategy.cacheChangingModulesFor 7, 'days'
    resolutionStrategy.cacheDynamicVersionsFor 7, 'days'

    resolutionStrategy.capabilitiesResolution.withCapability("org.slf4j:slf4j-api") {
        select("org.slf4j:slf4j-api:2.0.1")
    }

    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.group == 'org.slf4j' && details.requested.name == 'org.slf4j') {
            details.useTarget 'org.slf4j:slf4j-api:2.0.1'
        }
    }

    exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    exclude group: 'org.slf4j', module: 'slf4j-simple'
}

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    copyIdeResources = true
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

apply from: "$rootDir/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '.cache/'
}

mixin {
    add sourceSets.main, "mixins.${mod_id}.refmap.json"
    config "mixins.${mod_id}.json"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description, mod_url: mod_url,
            ldlib_version_range: ldlib_version_range, ldlib_version: ldlib_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        def manifestAttributes = [
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'MixinConfigs': "mixins.${mod_id}.json"
        ]

        if (gradle.startParameter.taskNames.any { it.toLowerCase(java.util.Locale.ROOT).contains('publish') }) {
            manifestAttributes['Implementation-Timestamp'] = new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        }

        attributes(manifestAttributes)
    }

    finalizedBy 'reobfJar'
}

task printVersion {
    doLast {
        println project.version
    }
}

tasks.register('sourcesJar', Jar) {
    from sourceSets.main.allSource
    archiveBaseName.set("${archivesBaseName}")
    archiveVersion.set("${project.version}")
    archiveClassifier.set('sources')
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
            artifact sourcesJar
        }
    }
    repositories {
        maven {
            url "https://maven.firstdark.dev/snapshots"
            credentials {
                username System.getenv("MAVEN_USER")
                password System.getenv("MAVEN_PASS")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
